src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BCA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Sc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Tech.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>CONTACT.DEPARTMENT</columns>
        <columns>CONTACT.ASSISTANT_NAME</columns>
        <columns>CONTACT.PHONE6</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CLEAN_STATUS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_FirstName</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( FirstName , &apos;[A-Za-z]*&apos;))</errorConditionFormula>
        <errorMessage>First Name should contain only alphabetic characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_LastName</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( LastName , &apos;[A-Za-z]*&apos;))</errorConditionFormula>
        <errorMessage>Last Name should contain only alphabetic characters.</errorMessage>
    </validationRules>
</CustomObject>